# conventional-semver

./: .gitignore  LICENSE  README.md  pyproject.toml
.gitea/workflows/: pipeline.yaml
.scripts/: build-package  conventional-semver  deploy-package  init-venv  make-docs  run-tests
docs/: conf.py  contact.rst  index.rst  license.rst  requirements.txt  usage.rst
docs/ref/: changelog_templates.rst  index.rst  semver_calculation.rst
src/conventional_semver/: Changelog.py  ChangelogOutputGenerator.py  CommandLineProcessor.py  Configuration.py  GitAdapter.py  GitEntry.py  GitEntryParser.py  GitLogStream.py  OutputGenerator.py  SemverComponentType.py  SemverOutputGenerator.py  Validator.py  __init__.py  __main__.py
tests/: ChangelogOutputGenerator_tests.py  Changelog_tests.py  CommandLineProcessor_tests.py  Validator_tests.py  integration_changelog_template_tests.py  placeholder.py
