[project]
name = "py-conventional-semver"
version = "0.0.0"
description = "..a Python fork of sw4k's `conventional-semver` tool."
keywords = ["SEMVER", "conventional-semver", "conventional-commits", "sw4k"]
authors = [
    { name="Shaun Wilson", email="mrshaunwilson@msn.com" }
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
requires-python = ">=3.11"
dependencies = [
    "hanaro (>=1.0.0)",
    "jinja2 (>=3.1.6)"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "punit (>=1.10.8)",
    "twine"
]

[project.urls]
Documentation = "https://conventional-semver.readthedocs.io/"
Homepage = "https://github.com/wilson0x4d/conventional-semver"
Repository = "https://github.com/wilson0x4d/conventional-semver.git"

[project.scripts]
conventional-semver = "conventional_semver.__main__:main"

[tool.setuptools.package-data]
"py-conventional-semver" = ["py.typed"]
